--- a/crm/product/templates/registration/register.html
+++ b/crm/product/templates/registration/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Авторизация</title>
+    <title>Регистрация</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -14,8 +14,9 @@
                 <form method="post">
                   {% csrf_token %}
                   {{ form.as_p }}
-                  <button type="submit">Войти</button>
+                  <button type="submit">Зарегистрироваться</button>
                 </form>
+              <p>Уже есть аккаунт? <a href="{% url 'accounts:login' %}">Войти</a></p>
             </div>
         </div>
     </div>
